--- a/1.html
+++ b/1.html
@@ -1,24 +1,40 @@
-<html>
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-    </head>
-    <body>
-        1
-        <!-- dosya içindeki klasöre ulaşmak için-->
-    <a href="link/2.html"> 2 nolu sayfaya ulaşmak için tıklayınız</a>
-    
-    <a href="3.html"> 3 nolu sayfaya ulaşmak için tıklayınız</a>
-    <a href="2.html" target="_blank"> 2 nolu sayfaya ulaşmak için tıklayınız</a>
-    <a href="#"> Haberler</a>
-    <a href="#Merhaba"> Merhaba bölümü</a>
-Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni error, commodi ipsum similique officiis quisquam praesentium et iste? Eos saepe odio architecto sit alias quo vel similique cumque sunt molestiae vitae neque aliquid accusamus error laboriosam inventore placeat odit ducimus dicta reiciendis, voluptates voluptatum blanditiis facilis aliquam. Sint saepe et delectus, quaerat nostrum ipsum rem eius maxime, nemo aliquam expedita beatae iste voluptatibus impedit ea quae ex nam qui? Debitis dicta fugiat placeat quo rem officiis eaque corporis est ducimus amet iste nisi tenetur aliquid molestiae, explicabo perferendis dolor soluta quidem aut consequatur quibusdam ut distinctio! Vel totam eaque similique dolorum iste fuga ipsum aperiam veniam numquam excepturi adipisci, ea dignissimos placeat itaque odio. Omnis ipsa ipsum quos magni, illum odio deserunt, modi voluptate sapiente distinctio exercitationem rem ea soluta? Impedit perspiciatis eius sequi aut inventore hic! Voluptatem id officia asperiores dicta. Saepe tempora sapiente laborum asperiores perferendis nulla a? Nihil minus veritatis, nemo eius aspernatur maiores ullam quasi ab illo itaque, esse unde fuga voluptatem? Possimus tempore perferendis quia autem ut ea cumque iste rerum! Voluptatum autem, incidunt unde eius exercitationem, saepe tenetur alias necessitatibus, magni quae atque illum excepturi quaerat reiciendis! In repudiandae autem accusantium quibusdam, earum suscipit magnam quisquam distinctio assumenda! Possimus, ipsa, provident fugit aliquid quod temporibus sit iure aspernatur eaque doloremque saepe. Rem minima nostrum quisquam dolore quas accusamus, earum blanditiis beatae eligendi error, ea fugiat mollitia! Aliquid recusandae alias tempora soluta officiis non. Accusantium, sit qui. Iusto tempore quos non eum molestiae cupiditate tempora inventore mollitia molestias quibusdam sequi maxime aliquid quo, optio deserunt aliquam reprehenderit reiciendis harum laboriosam fugit dolorem hic. Quod tempora placeat recusandae, animi eligendi aut aliquam? Autem voluptatibus optio quas? Iure voluptas perferendis fugiat. Rerum cumque nesciunt optio consectetur laudantium, explicabo reprehenderit perspiciatis nihil delectus unde laboriosam et blanditiis minima exercitationem eius ipsa, error recusandae esse, ad similique quidem sed. Dicta deserunt voluptatibus quae velit provident iusto incidunt ipsam sed ex molestiae quos quisquam aliquam autem, inventore rerum reprehenderit repellat, in, vero fugiat ut eius harum dolorem fugit rem? Est odit error corporis quas odio ratione ut numquam, esse repellat ipsa illo a sapiente facilis dicta qui iste nihil, sunt similique explicabo quisquam magnam at eaque libero. Temporibus earum hic ex velit cupiditate ipsum, eaque quos in debitis. Minus, iure blanditiis eaque, magnam, quis ab aspernatur dicta similique consectetur accusantium quidem quod soluta dolore quisquam corrupti sit placeat. Qui officiis debitis fuga, odit maxime optio unde quasi natus nulla temporibus nobis esse voluptas impedit repellat odio libero quibusdam vitae accusantium. Obcaecati dolorem veritatis provident nihil saepe minus ullam ea officia explicabo amet eaque culpa illum aspernatur iste omnis corrupti natus animi, accusantium ab doloremque praesentium repellendus! Enim molestiae voluptatum rem quos ut ipsam dicta, vitae cupiditate qui pariatur provident corrupti sit excepturi nihil natus reiciendis non adipisci nisi! Nam nulla repellendus obcaecati a ex libero, placeat dignissimos sapiente consequuntur omnis hic quidem suscipit quisquam labore saepe soluta rem deserunt? Iure minima possimus, dolor voluptatem odit facilis, eos qui amet laboriosam cupiditate debitis ut quas, illo praesentium? Delectus, ipsa unde soluta quo eligendi consectetur officiis omnis illum repudiandae expedita laboriosam, totam commodi nam ullam placeat perferendis sint fugiat. Non debitis iste quidem, labore distinctio odio at corrupti nostrum quo quisquam, autem itaque similique commodi quaerat iusto laborum quia earum nam? Aliquam eligendi assumenda dignissimos quasi. Dolore deserunt distinctio natus similique pariatur voluptas dolorem incidunt. Ad aperiam est labore beatae eos tempora voluptatibus atque illum, maiores mollitia quaerat fuga distinctio quia dolores ipsam iste. Id aut fugit similique explicabo alias vel deleniti repudiandae, qui ad, eveniet laboriosam enim sequi unde sit doloribus error. Consequatur asperiores excepturi, nihil aliquam accusamus aspernatur harum minus veniam sint quas perferendis exercitationem libero nobis ipsa expedita quaerat voluptate provident nesciunt quae maxime quod quos alias. Perferendis, eaque voluptatum. Mollitia necessitatibus vitae incidunt dignissimos ratione est ipsam, totam nemo repudiandae ut, quasi nihil tempora molestiae, libero maxime aperiam iste a. Maiores quas minus quae earum quasi quisquam provident perspiciatis molestias debitis dolor veniam voluptatem, repudiandae expedita deserunt excepturi harum nostrum dignissimos quis eligendi? Neque quas cupiditate sapiente tempora praesentium, quidem totam. Voluptatum, repudiandae, ipsum deleniti facere omnis tempora ratione cum accusamus earum minus a? Ducimus dolorum tempore debitis veniam vitae fugit, modi repellat, dolore aspernatur fuga omnis quisquam optio obcaecati animi repudiandae rerum officia! Accusamus qui ab impedit ex quia et tempore maxime rem nobis nesciunt, labore esse reiciendis similique assumenda dolores sapiente aliquid. Recusandae earum mollitia soluta commodi quo magnam laudantium vitae facere atque placeat quibusdam eveniet, molestias tempora eligendi ullam modi officia. Rerum, nostrum deleniti. Vitae, fugit distinctio quos corrupti ab explicabo a consectetur, sunt, dolores magnam eos exercitationem numquam pariatur praesentium sequi adipisci delectus animi. Voluptatum est reprehenderit sit perspiciatis nesciunt, sed rerum error tempore saepe? Quidem itaque inventore expedita soluta, sint earum asperiores nam recusandae maiores, optio quasi saepe dolorum! Laudantium, a earum dolorum dignissimos quis et illum unde quo eaque enim incidunt dolor, fugiat corrupti magni ea! Recusandae cum nisi, deserunt rem accusantium, libero nihil non perspiciatis harum ab ipsa, ad nemo quis eos! Magnam illo dolore, voluptate cupiditate atque fugit excepturi! Veniam atque et maxime odio dignissimos architecto similique tempora perspiciatis. Sapiente ducimus dolor exercitationem deleniti deserunt aliquid dolorum. Reiciendis eligendi animi dolores ducimus eaque consequatur aliquid beatae, illo voluptatem, iste numquam aut mollitia molestias impedit doloremque labore pariatur odio nulla minus nemo asperiores voluptas ea quaerat delectus! Ipsum voluptate quo repellat enim asperiores impedit inventore a fugit, iste nisi alias blanditiis doloremque, veniam quisquam dolorem magnam dicta debitis officiis. Dolore, quis optio? Molestiae perspiciatis rem pariatur excepturi placeat quia corrupti rerum ullam? Facilis corporis nihil reiciendis consequatur libero asperiores dignissimos fugit placeat culpa? Suscipit dicta fuga eveniet reprehenderit, sequi perspiciatis quas officiis error veritatis possimus quia. Provident quis consequuntur suscipit! Earum consequatur vero nesciunt quo eius qui. Distinctio cum nemo culpa, explicabo nobis deserunt ab qui odit eaque corporis neque, adipisci, porro modi! Expedita doloribus aliquid numquam animi dignissimos molestiae, tempore voluptatum ad deleniti nostrum qui obcaecati, eius recusandae? Dolores, odio?
- <a name="Merhaba"> <h1>Merhaba</h1></a>
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum quae ut sit repellat reiciendis nam eos ratione suscipit. Totam laudantium corrupti hic autem repudiandae id labore? Nam voluptas commodi nobis nesciunt delectus, id reiciendis assumenda, ab nostrum, optio suscipit enim officia illum est mollitia ex quidem reprehenderit quibusdam maiores natus? Deleniti quod, optio commodi amet, earum dolorem perferendis voluptas architecto beatae, quos maxime corporis perspiciatis soluta? Eligendi accusamus tempora, hic laboriosam est provident corrupti ipsa sapiente aut nobis consequatur vero itaque nisi omnis quia tempore, fugiat molestiae dolore. Minima repellendus excepturi reiciendis quo hic atque? Voluptate repudiandae placeat voluptatem dignissimos.
- 
-
-    </body>
-    </html>
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="stil.css">
+</head>
+<body>
+  <a href="2.html">İletişim</a>
+  <a href="3.html">Hakkında</a> <br>
+  <div class="kapsa"> 
+  <div class="k1">
+    <img src="resimler/1.jpg" alt="Resim 1">
+    <p>İstanbul</p>
+  </div>
+  <div class="k1">
+    <img src="resimler/2.jpg" alt="Resim 2">
+    <p>Kadıköy</p>
+  </div>
+  <div class="k1">
+    <img src="resimler/3.jpg" alt="Resim 3">
+    <p>Beyoğlu</p>
+  </div>
+  <div class="k1">
+    <img src="resimler/4.jpg" alt="Resim 4">
+    <p>İstanbul-2</p>
+  </div>
+  <div class="k1">
+    <img src="resimler/5.jpg" alt="Resim 5">
+    <p>İstanbul-3</p>
+  </div>
+  <div class="k1">
+    <img src="resimler/6.png" alt="Resim 6">
+    <p>İstanbul-4</p>
+  </div>
+  </div>
+</body>
+</html>
