--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="stil.css">
+
 </head>
 <body>
-  <a href="1.html">Galeri</a>
-  <a href="2.html">İletişim</a>
+  
+  <div class="kapsa">
+    <div class="k1"></div>
+  <div class="k2"></div>
+  <div class="k3"></div>
+  <div class="k4"></div>
+  <div class="k5"></div>
+  <div class="k6"></div>
+  <div class="k7"></div>
+  </div>
 </body>
 </html>
