--- a/index2.html
+++ b/index2.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="stil.css">
+  <link rel="stylesheet" href="stil2.css">
 </head>
 <body>
-  <a href="1.html">Galeri</a>
-  <a href="2.html">İletişim</a>
+  <div class="kapsa">
+    <div class="k1">1</div>
+    <div class="k2">2</div>
+    <div class="k3">3</div>
+  </div>
+  
 </body>
 </html>
